--- a/index.html
+++ b/index.html
@@ -13,9 +13,25 @@
     <div id="Blocks">
       <div id="content">
       <h2>What Is Computer Engineering?</h2>
-      <p>Computer Engineering is made up of two different topics. The first of these topics is software engineering. Software engineering is the devlopment of apps or programs such as Zoom or Youtube. The second topic is hardware engineering which is the devlopment of technology such as a computer which can be a desktop or server. Hardware can even be the TV you watch at night or a phone. </p>
-      <h2>What Computer Engineers Need To Learn and Undersatnd</h2>
-      <p>Computer Engineers typical need an understanding of data structures, algorithms, numerical methods, graphics, statistics, and data visualization. As of right now there are lots of jobs you can take as a computer engineer such as a software devloper, hardware engineer, data systems devloper. These people makes devices such as your phone, computer, laptop, TV, and more. They also devlop apps or programs such as zoom, youtube, and even calculators.</p>
+      <p>Computer Engineering is made up of two different topics. The first of these topics is software engineering. Software engineering is the devlopment of apps or programs such as Zoom or Youtube. The second topic is hardware engineering which is the devlopment of technology such as a computer which can be a desktop or server. Hardware can even be the TV you watch at night or a phone. </p> 
+      </div>
+    </div>
+    <div id="Blocks">
+      <div id="Education">
+        <h2>Education Requirements and What Computer Engineers Need To Learn</h2>
+        <p>In order to becaome a Computer Engineer you would need a bachelor's degree in computer science for entry-level requirements. Computer Engineers also typical need an understanding of data structures, algorithms, numerical methods, graphics, statistics, and data visualization.</p>
+      </div>
+    </div>
+    <div id="Blocks">
+      <div id="Jobs">
+        <h2>Jobs Available In Computer Engineering</h2>
+        <p>As of right now there are lots of jobs you can take as a computer engineer such as a software devloper, hardware engineer, and data systems devloper. </p>
+      </div>
+    </div>
+    <div id="Blocks">
+      <div id="Products">
+        <h2>What Products Are Producted By Computer Engineering?</h2>
+        <p></p>
       </div>
     </div>
     <div id="Blocks">
