--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <div id="Blocks">
       <div id="Jobs">
         <h2>Jobs Available In Computer Engineering</h2>
-        <p>As of right now there are lots of jobs you can take as a computer engineer such as a software devloper, hardware engineer, and data systems devloper. </p>
+        <p>There are many job opportunities as a computer engineer. You can work as a hardware engineer building circuit boards, hard drives, and micro processors. Software engineers build websites, phone apps, or data analysis.</p>
       </div>
     </div>
     <div id="Blocks">
       <div id="Products">
         <h2>What Products Are Producted By Computer Engineering?</h2>
-        <p></p>
+        <p>Computer Engineering can produce items such as a computers, laptops, TVs, or phones. Other items can be various computer parts such as computer chips, circuit boards, computer systems, and other related equipment like keyboards and mice. These smaller parts can be used to build larger systems such as robotics for manufacturing.</p>
       </div>
     </div>
     <div id="Blocks">
       <div id="Connection_to_Day_to_Day_Life">
         <h2>How We Use Computer Enigneering In Every Day Life</h2>
-        <p>We use computer engineering in every day life like with the chromebooks at school and our phones after school. Computer engineering is more important than ever because of covid-19 and we use it for zoom and our browser. We even use it for the week-end for example we watch TV, play video games, and and do work that wasn't completed.</p>
+        <p>We use computer engineering in every day life with chromebooks at school, phones, and TV. Computer engineering is more important than ever because of COVID-19 as we use it daily with Zoom and our browser. We even use it for the entertainment like watching TV and playing video games.</p>
       </div>
     </div>
     <div>
