--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div id="Blocks">
       <div id="content">
       <h2>What Is Computer Engineering?</h2>
-      <p>Computer Engineering is made up of two different topics. The first of these topics is software engineering. Software engineering is the devlopment of apps or programs such as Zoom or Youtube. The second topic is hardware engineering which is the devlopment of technology such as a computer which can be a desktop or server. Hardware can even be the TV you watch at night or a phone. </p> 
+      <p>Computer Engineering can be different subjects such as hardware, software, and electrical engineering. Hardware engineering which is the development of technology such as a computer which can be a desktop or server. Hardware can even be the TV you watch at night or a phone. Software engineering is the devlopment of apps or programs such as Zoom or Youtube. Electrical is the circuitry between pieces of hardware.</p> 
       </div>
     </div>
     <div id="Blocks">
       <div id="Education">
         <h2>Education Requirements and What Computer Engineers Need To Learn</h2>
-        <p>In order to becaome a Computer Engineer you would need a bachelor's degree in computer science for entry-level requirements. Computer Engineers also typical need an understanding of data structures, algorithms, numerical methods, graphics, statistics, and data visualization.</p>
+        <p>In order to become a Computer Engineer you need a bachelor's degree in computer science for entry-level requirements. Computer Engineers also typically need an understanding of data structures, algorithms, numerical methods, graphics, statistics, and data visualization. Hardware engineering needs an understanding of electrical engineering and computer science.</p>
       </div>
     </div>
     <div id="Blocks">
