--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div id="Blocks">
       <div id="content">
       <h2>What Is Computer Engineering?</h2>
-      <p>Computer Engineering can be different subjects such as hardware, software, and electrical engineering. Hardware engineering which is the development of technology such as a computer which can be a desktop or server. Hardware can even be the TV you watch at night or a phone. Software engineering is the devlopment of apps or programs such as Zoom or Youtube. Electrical is the circuitry between pieces of hardware.</p> 
+      <p>Computer Engineering can be different subjects such as hardware, software, and electrical engineering. Hardware engineering is the development of technology such as a computer which can be a desktop or server. Hardware can even be the TV you watch at night or a phone. Software engineering is the devlopment of apps or programs such as Zoom or Youtube. Electrical is the circuitry between pieces of hardware.</p> 
       </div>
     </div>
     <div id="Blocks">
       <div id="Education">
         <h2>Education Requirements and What Computer Engineers Need To Learn</h2>
-        <p>In order to become a Computer Engineer you need a bachelor's degree in computer science for entry-level requirements. Computer Engineers also typically need an understanding of data structures, algorithms, numerical methods, graphics, statistics, and data visualization. Hardware engineering needs an understanding of electrical engineering and computer science.</p>
+        <p>In order to become a Computer Engineer you need a bachelor's degree in computer science for an entry-level position. Computer Engineers also typically need an understanding of data structures, algorithms, numerical methods, graphics, statistics, and data visualization. Hardware engineering needs an understanding of electrical engineering and computer science.</p>
       </div>
     </div>
     <div id="Blocks">
@@ -30,14 +30,14 @@
     </div>
     <div id="Blocks">
       <div id="Products">
-        <h2>What Products Are Producted By Computer Engineering?</h2>
-        <p>Computer Engineering can produce items such as a computers, laptops, TVs, or phones. Other items can be various computer parts such as computer chips, circuit boards, computer systems, and other related equipment like keyboards and mice. These smaller parts can be used to build larger systems such as robotics for manufacturing.</p>
+        <h2>What Products Are Produced By Computer Engineering?</h2>
+        <p>Computer Engineering can produce items such as computers, laptops, TVs, or phones. Other items can be various computer parts such as computer chips, circuit boards, computer systems, and other related equipment like keyboards and mice. These smaller parts can be used to build larger systems such as robotics for manufacturing.</p>
       </div>
     </div>
     <div id="Blocks">
       <div id="Connection_to_Day_to_Day_Life">
-        <h2>How We Use Computer Enigneering In Every Day Life</h2>
-        <p>We use computer engineering in every day life with chromebooks at school, phones, and TV. Computer engineering is more important than ever because of COVID-19 as we use it daily with Zoom and our browser. We even use it for the entertainment like watching TV and playing video games.</p>
+        <h2>How We Use Computer Engineering In Every Day Life</h2>
+        <p>We use computer engineering in every day life with chromebooks at school, phones, and TV. Computer engineering is more important than ever because of COVID-19 as we use it daily with Zoom and our browser. We even use it for entertainment like watching TV and playing video games.</p>
       </div>
     </div>
     <div>
